# tudo

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml  workflow.yaml
.github/workflows/: check.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs  tudo.rs  utils.rs
crates/cli/src/cli/: tudo.rs
crates/cli/src/cmd/: mod.rs  tudo.rs  utils.rs
crates/cli/src/cmd/tudo/: build.rs  playbook.rs
crates/cli/src/cmd/tudo/playbook/: core.rs
crates/cli/src/opts/: tudo.rs
crates/collectors/: Cargo.toml
crates/collectors/src/: args.rs  cli.rs  lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  logging.rs  utils.rs
crates/executor/: Cargo.toml
crates/executor/src/: job.rs  lib.rs  playbook.rs  step.rs  workflow.rs  workflow_controller.rs
crates/executor/src/job/: job_context.rs  job_executor.rs
crates/executor/src/playbook/: playbook_context.rs  playbook_executor.rs
crates/executor/src/step/: call_contract.rs  mock_step.rs  step_executor.rs  step_pipeline.rs  types.rs
crates/executor/src/workflow/: workflow_context.rs  workflow_executor.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: alloy_converter.rs  interpreter.rs  job.rs  lib.rs  playbook.rs  step.rs  types.rs  workflow.rs
crates/interpreter/src/interpreter/: errors.rs
crates/interpreter/src/job/: job_config.rs  job_name.rs
crates/interpreter/src/playbook/: playbook_block.rs  playbook_config.rs  setup.rs  version.rs
crates/interpreter/src/playbook/playbook_block/: rpc_provider.rs  variable.rs
crates/interpreter/src/step/: step_argument_trait.rs  step_arguments.rs  step_config.rs  step_name.rs  step_output.rs  step_types.rs
crates/interpreter/src/step/step_arguments/: call_contract.rs
crates/interpreter/src/types/: config.rs  dyn_sol_type_wrapper.rs  function_arguments.rs  function_return_types.rs  function_selector.rs  function_signature.rs  solidity_types.rs  variable_name.rs
crates/interpreter/src/workflow/: workflow_config.rs  workflow_name.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: job.rs  lib.rs  step.rs  utils.rs  workflow.rs
crates/primitives/src/job/: job_context.rs
crates/primitives/src/step/: call_contract.rs  send_transaction.rs  step_arguments.rs  step_error.rs  step_output.rs  step_trait.rs
crates/shared/: Cargo.toml
crates/shared/src/: step.rs  utils.rs
crates/shared/src/step/: blank_step.rs  send_transaction.rs  step_error.rs
documentations/: README.md
examples/monitor-contracts/: playbook.yaml
