[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Quang Nguyen <quangkeu95@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/quangkeu95/tudo"
repository = "https://github.com/quangkeu95/tudo"
# exclude = ["benches/", "tests/"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tudo-interpreter = { version = "0.1.0", path = "crates/interpreter" }
tudo-cli = { version = "0.1.0", path = "crates/cli"}
tudo-config = { version = "0.1.0", path = "crates/config"}
tudo-primitives = { version = "0.1.0", path = "crates/primitives"}
tudo-executor = { version = "0.1.0", path = "crates/executor"}

ethers = { git = "https://github.com/gakonst/ethers-rs"}

# format
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"  }

# misc
color-eyre = "0.6"
eyre = "0.6"
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
enum_dispatch = "0.3"