[workspace]
members = ["crates/*"]
resolver = "2"
# default-members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quang Nguyen <quangkeu95@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/quangkeu95/tudo"
repository = "https://github.com/quangkeu95/tudo"
# exclude = ["benches/", "tests/"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
interpreter = { version = "0.1.0", path = "crates/interpreter" }
cli = { version = "0.1.0", path = "crates/cli"}
config = { version = "0.1.0", path = "crates/config"}
shared = { version = "0.1.0", path = "crates/shared"}
executor = { version = "0.1.0", path = "crates/executor"}
collectors = { version = "0.1.0", path = "crates/collectors"}

ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "ipc"]}

# format
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"  }

# misc
color-eyre = "0.6"
eyre = "0.6"
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
enum_dispatch = "0.3.12"
derive_builder = "0.12"
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }

# testing
proptest = "1.2.0"