[package]
name = "tudo-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "tudo"
path = "src/tudo.rs"

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "git2"] }

[dependencies]
#internal
tudo-config = { workspace = true }
tudo-interpreter = { workspace = true }
tudo-executor = { workspace = true }

#cli
clap = { version = "4", features = ["derive", "env", "cargo", "unicode", "wrap_help"] }
owo-colors = { version = "3.5", features = ["supports-colors"]}

# misc
dotenvy = "0.15.7"
color-eyre = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }

# async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
