[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Quang Nguyen <quangkeu95@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/quangkeu95/tudo"
repository = "https://github.com/quangkeu95/tudo"

[[bin]]
name = "tudo"
path = "src/tudo.rs"

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "git2"] }

[dependencies]
#internal
config = { workspace = true }
interpreter = { workspace = true }
executor = { workspace = true }

#cli
clap = { version = "4", features = ["derive", "env", "cargo", "unicode", "wrap_help"] }
owo-colors = { version = "4.0", features = ["supports-colors"]}

# misc
dotenvy = "0.15.7"
color-eyre = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }

# async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
