[package]
name = "tudo-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# internal
tudo-primitives = { workspace = true }
tudo-interpreter = { workspace = true }
ethers = { workspace = true }

# misc
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
enum_dispatch = { workspace = true }
derive_builder = "0.12.0"
derive_more = "0.99"

[dev-dependencies]
claims = { version = "0.7" }

