[package]
name = "tudo-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# internal
tudo-primitives = { workspace = true }
tudo-interpreter = { workspace = true }
tudo-config = { workspace = true }
ethers = { workspace = true }

# misc
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
enum_dispatch = { workspace = true }
derive_builder = { workspace = true }
derive_more = "0.99"
futures = "0.3.28"
daggy = "0.8.0"

[dev-dependencies]
claims = { version = "0.7" }

