[package]
name = "executor"
version = "0.1.0"
edition = "2021"
authors = ["Quang Nguyen <quangkeu95@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/quangkeu95/tudo"
repository = "https://github.com/quangkeu95/tudo"

[dependencies]
# internal
shared = { workspace = true }
interpreter = { workspace = true }
config = { workspace = true }
ethers = { workspace = true }

# misc
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
enum_dispatch = { workspace = true }
derive_builder = { workspace = true }
derive_more = "0.99"
futures = "0.3.28"
daggy = "0.8.0"

[dev-dependencies]
claims = { version = "0.7" }

