[package]
name = "tudo-interpreter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# internal
tudo-primitives = { workspace = true }
ethers = { workspace = true }

alloy-sol-types = { version = "0.3" }
alloy-primitives = { version = "0.3" }
alloy-dyn-abi = { version = "0.3", features = ["arbitrary", "eip712"] }

# format
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.25"
serde-enum-str = "0.3"

# misc
eyre = { workspace = true }
thiserror = { workspace = true }
enum_dispatch = { workspace = true }
proptest = { workspace = true }
derive_more = "0.99.17"
lazy_static = "1.4"
regex = "1.9"

[dev-dependencies]
claims = { version = "0.7" }
