[package]
name = "tudo-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.72"
auto_impl = "1.1.0"
eyre = { workspace = true }
hashbrown = "0.14.0"
