[package]
name = "tudo-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# internal
ethers = { workspace = true }

# misc
async-trait = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
enum_dispatch = { workspace = true }
futures = { workspace = true }
auto_impl = "1.1.0"
hashbrown = "0.14.0"
derive_builder = "0.12.0"
derive_more = "0.99"

[dev-dependencies]
claims = { version = "0.7" }
