[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Quang Nguyen <quangkeu95@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/quangkeu95/tudo"
repository = "https://github.com/quangkeu95/tudo"

[dependencies]
# internal
ethers = { workspace = true }

# misc
async-trait = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
enum_dispatch = { workspace = true }
futures = { workspace = true }
auto_impl = "1.1.0"
hashbrown = "0.14.0"
derive_builder = "0.12.0"
derive_more = "0.99"


[dev-dependencies]
claims = { version = "0.7" }
